# esp_wroom_32_a2dpsink

./: .envrc  .gitignore  LogPotentiometer.ods  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  bt_app_autoconnect.c  bt_app_autoconnect.h  bt_app_av.c  bt_app_av.h  bt_app_bda.c  bt_app_bda.h  bt_app_core.c  bt_app_core.h  bt_app_display.c  bt_app_display.h  bt_app_gap.c  bt_app_gap.h  bt_app_i2s.c  bt_app_i2s.h  bt_app_led.c  bt_app_stack.c  bt_app_stack.h  bt_app_vol.c  connlog.txt  main.c  ui_display.c  ui_display.h
