idf_component_register(SRCS "bt_app_autoconnect.c" 
                            "bt_app_av.c"
                            "bt_app_bda.c"
                            "bt_app_gap.c"
                            "bt_app_core.c"
                            "bt_app_i2s.c"
                            "bt_app_display.c"
                            "bt_app_stack.c"
                            "bt_app_vol.c"
                            "main.c"
                    INCLUDE_DIRS ".")
